# lpub3d

./: .dropbox_oauth  .gitattributes  .gitignore  .gitmodules  .sfdeploy_travis_rsa  .travis.yml  Gemfile  LPub.icns  LPub3D.pro  LPub3DPlatformSpecific.pri  README.md  _config.yml  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  annotations.cpp  appveyor.yml  assemglobals.cpp  backgrounditem.h  borderdialog.cpp  borderdialog.h  build.h  calloutbackgrounditem.cpp  calloutbackgrounditem.h  calloutglobals.cpp  color.cpp  color.h  commands.cpp  commands.h  commonmenus.h  csiitem.cpp  dependencies.cpp  dependencies.h  dividerdialog.cpp  editwindow.cpp  editwindow.h  fadestepcolorparts.cpp  fadestepglobals.cpp  fileutils.cpp  fileutils.h  (+72 more)
.github/: ISSUE_TEMPLATE.md
_data/: settings.yml  sliders.yml
_includes/: README.md  obs-linux-distributions.html
_layouts/: default.html
core/: LPub3D.pro  annotations.h  backgrounddialog.h  backgrounditem.cpp  callout.cpp  callout.h  commonmenus.cpp  csiitem.h  highlighter.h  ldrawfiles.cpp  lpub.qrc  lpub.rc  lpub_preferences.h  main.cpp  metagui.h  metaitem.h  numberitem.h  pagebackgrounditem.h  paths.h  pli.cpp  pointeritem.h  projectglobals.cpp  ranges.cpp  ranges_element.h  render.h  reserve.h  undoredo.cpp  version.h
extras/: LPubV-Config-Notes.txt  fadeStepColorParts.lst  freeformAnnotations.lst  lcLDrawArchive.bat  pli.mpd  titleAnnotations.lst  titleannotations.lst
images/: Thumbs.db  lpub3d.icns
lc_lib/: lc_lib.pri
lclib/: lclib.pri  lclib.pro  lclib.qrc
ldrawini/: LICENSE  ldrawini.c  ldrawini.h  ldrawini.pri  ldrawini.pro  ldrawini.vcxproj  ldrawini_global.h  ldrawinp.h
ldvlib/: ldvlib.pri
mainApp/: Info.plist  build.h  (+310 more)
qslog/: CMakeLists.txt  LICENSE.txt  QsDebugOutput.cpp  QsLog.cpp  QsLog.h  QsLog.pri  QsLogDest.cpp  QsLogDest.h  QsLogDestConsole.cpp  QsLogDestConsole.h  QsLogDestFile.cpp  QsLogDestFile.h  QsLogDestFunctor.cpp  QsLogDestFunctor.h  QsLogDisableForThisFile.h  QsLogLevel.h  README.md  qslog.pro
(+790 files in other folders)
